cabal-version: >=1.10
name:
  bi
version:
  0.1.0.0
synopsis:
  bimonadic and relative bimonadic functors
description:
  This library provides typeclass definitions for
  Bimonadic functors and Relative Bimonadic Functors.
  . 
  A Bimonadic functor is an endofunctor in Hask x Hask, which
  looks like the following:
    @(a -> c, b -> d) -> (l a b -> l c d, r a b -> r c d)@
  where @l@ and @r@ are two Bifunctors. An endofunctor in the
  product category Hask x Hask is then the same as these two
  Bifunctors.
    @bireturn@ is an arrow from (a,b) to (l a b, r a b)
  .
    @bijoin@ is an arrow from (l (l a b) (r a b), r (l a b) (r a b)) to (l a b, r a b).
  .
    @bibind@ is an arrow from (l a b, r a b) to (a -> l c d, b -> r c d) to (l c d, r c d).
  .
  For clarity, in the typeclass definitions these functions are
  split into left and right correspondents (i.e. 'bibindl', 'bibindr', etc.)
  .
  A restriction of bifunctors, and by extension biapplicative
  and bimonadic functors, is that they all need to be endofunctors.
  Relative monads (http://www.cs.nott.ac.uk/~psztxa/publ/Relative_Monads.pdf) do not have this restriction.
homepage:
  https://github.com/chessai/bi.git
license:
  BSD3
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  (c) 2018 chessai
  (c) 2018 cardenaso11
category:
  Control
build-type:
  Simple
extra-source-files:
  ChangeLog.md

library
  exposed-modules:
    Control.Bimonad
    Control.Bimonad.Relative
  build-depends:
       base >=4.0 && <4.13
     , bifunctors >= 5.5
  hs-source-dirs:
    src
  default-language:
    Haskell2010
